# sbom-from-build

./: .gitignore  Dockerfile  README.md  leanix-techstack.yaml  leanix.yaml
.github/workflows/: deploy.yaml  sbom-release.yaml
hello_world/: Dockerfile  pyproject.toml
hello_world/hello_world/: leanix.py  main.py  models.py  mtm.py  utils.py
